<resources>
    <string name="app_name">掌中天涯</string>
    <string name="ok">确定</string>
    <string name="unsuport">尚未支持该功能噢</string>
    <string name="search_hint">请输入您要搜索的内容</string>
    <string name="cancel">取消</string>
    <string name="skip_to">跳转到</string>
    <string name="copy_data_success">成功复制</string>
    <string name="auto_redirect_post_position">系统正在为您定位到最后一次阅读的位置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_image">图片</string>

    <string name="search_title">搜索[%s]的结果 </string>

    <string name="me">我</string>
    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_captcha">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">无效的账号</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">无效的密码</string>
    <string name="error_field_required">内容不能为空</string>
    <string name="error_captcha_load_fail">验证码加载失败,请稍后再登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- MainTab -->
    <string name="main_tab_home">首页</string>
    <string name="main_tab_collections">收藏集</string>
    <string name="main_tab_commuities">社群</string>
    <string name="main_tab_notifications">通知</string>

    <!-- Channel -->
    <string name="channel_recommend">推荐</string>
    <string name="channel_hot">热贴</string>
    <string name="channel_bagua">八卦</string>

    <string name="channel_guoji">国际</string>
    <string name="channel_gushi">股市</string>
    <string name="channel_car">汽车</string>

    <string name="channel_guihua">鬼话</string>
    <string name="channel_qinggan">情感</string>
    <string name="channel_zatan">杂谈</string>

    <string name="channel_shishang">时尚</string>
    <string name="channel_lvyou">旅游</string>
    <string name="channel_meitu">美图</string>
    <string name="channel_chengshi">城市</string>

    <string name="channel_user_section_bookmarks">板块</string>
    <string name="channel_user_thread_bookmarks">帖子</string>

    <string name="channel_user_threads">我的发表</string>
    <string name="channel_user_posts">我的回复</string>

    <string name="channel_follows">\@我</string>
    <string name="channel_comments">评论</string>
    <string name="channel_replies">回复</string>
    <string name="channel_messages">消息</string>
    <string name="channel_notifications">通知</string>

    <!-- ThreadDetail -->
    <string name="post_floor_owner">楼主</string>
    <string name="post_floor">楼</string>
    <string name="loading">加载中</string>
    <string name="loading_nor_more">没有更多内容了</string>

    <string name="input_sender">发送</string>

    <string name="post_reply_success">赞,回帖成功!+3分</string>
    <string name="post_content_tail">\r\n\r\n--来自最有情怀可以 #发表情# 的天涯客户端--</string>
    <string name="post_content_mark">马克一下</string>

    <string name="actionbar_title_detail">帖子详情</string>
    <string name="actionbar_title_bookmarks">我的书签</string>
    <string name="actionbar_title_histories">阅读记录</string>
    <string name="actionbar_title_posts">我的帖子</string>
    <string name="actionbar_title_notice">我的通知</string>
    <string name="actionbar_title_activity_pub">发布一个帖子</string>
    <string name="actionbar_title_friends">我的好友</string>

    <string name="nav_my_bookmarks">我的书签</string>
    <string name="nav_my_histories">阅读记录</string>
    <string name="nav_my_posts">我的帖子</string>
    <string name="nav_my_settings">设置</string>

    <string name="nav_unlogin">未登录</string>

    <string name="nav_recommends">热门活动</string>
    <string name="nav_activities">抽奖活动</string>

    <string name="prefs_settings">设置</string>
    <string name="prefs_font_size">正文字体大小</string>
    <string name="prefs_show_image">自动下载图片</string>
    <string name="prefs_show_head_img">自动下载头像</string>
    <string name="prefs_auto_save_post_position">自动记录上次阅读位置</string>
    <string name="prefs_clean_cache">清理缓存</string>

    <string name="prefs_font_size_big">巨大</string>
    <string name="prefs_font_size_mid">偏大</string>
    <string name="prefs_font_size_small">正常</string>

    <string name="notice_messages_content">你有%s条最新消息</string>
    <string name="notice_follows">\@我(%s) </string>
    <string name="notice_comments">评论(%s) </string>
    <string name="notice_replies">回复(%s) </string>
    <string name="notice_messages">私信(%s) </string>
    <string name="notice_notifictions">通知(%s) </string>

    <string name="post_opt_unfilter">查看全部</string>
    <string name="post_opt_filter">只看ta</string>
    <string name="post_opt_copy">复制</string>
    <string name="post_opt_quote">引用</string>
    <string name="post_opt_comment">评论</string>

    <string name="add_bookmark_success">收藏成功,可以到收藏列表查看噢</string>
    <string name="remove_bookmark_success">成功删除收藏,您还可以再次收藏噢</string>
    <string name="skip_out_of_range">您输入的楼层数超出最大值（%s）了</string>

    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="error_no_sd">无法保存照片，请检查SD卡是否挂载</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_subject_empty">标题不能为空哦</string>
    <string name="tip_content_empty">内容不能为空哦</string>
    <string name="tip_content_too_long">内容好像多了一点哦</string>
    <string name="tip_subject_too_long">标题过长了</string>

    <string name="menu_thread_detail_mark">马克</string>
    <string name="menu_thread_skip">跳楼</string>
    <string name="menu_share">分享</string>
    <string name="menu_fav">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_pub">发布</string>

    <string name="hint_pub_post_body">发个帖,把内容分享给网友~</string>
    <string name="hint_pub_post_subject">一个好的标题可以吸引网友点击</string>

    <string name="post_publishing">正在发表帖子</string>
    <string name="post_public">发表帖子</string>
    <string name="post_publish_success">帖子发布成功</string>
    <string name="post_publish_faile">发布帖子失败</string>

    <string name="friend_friends">我的好友</string>
    <string name="friend_followers">我的关注者</string>
    <string name="friend_following">我关注的</string>
</resources>
