<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_bookmarks"
            android:icon="@drawable/ic_menu_bookmarks"
            android:title="@string/nav_my_bookmarks" />
        <item
            android:id="@+id/nav_my_histories"
            android:icon="@drawable/ic_menu_histories"
            android:title="@string/nav_my_histories" />
        <item
            android:id="@+id/nav_my_posts"
            android:icon="@drawable/ic_menu_posts"
            android:title="@string/nav_my_posts" />

        <item
            android:id="@+id/nav_my_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_my_settings" />

    </group>

    <item android:title="@string/nav_recommends">
        <menu>
            <item
                android:id="@+id/nav_activities"
                android:icon="@drawable/ic_menu_activities"
                android:title="@string/nav_activities" />
        </menu>
    </item>

</menu>
