<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_fav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/btn_opt_favorite_selector"
        android:title="@string/menu_fav"
        android:visible="true"/>

    <item
        android:id="@+id/menu_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/btn_opt_share_selector"
        android:title="@string/menu_share"
        android:visible="true"/>

    <item
        android:id="@+id/menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/btn_opt_search_selector"
        android:title="@string/menu_search"
        android:visible="true"/>

</menu>