<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">

            <RelativeLayout
                android:id="@+id/layout_userface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <apollo.tianya.widget.AvatarView
                    android:id="@+id/userface"
                    style="@style/thread_user_face_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/author"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/userface"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8.0dip"
                    />

                <TextView
                    android:id="@+id/floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/post_floor_owner"
                    android:textSize="10sp"
                    android:background="@drawable/post_floor_owner"
                    android:textColor="@color/post_floor"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/author"
                    android:layout_marginTop="1dp"/>

                <TextView
                    android:id="@+id/time"
                    android:text="@string/app_name"
                    style="@style/list_text_info"
                    android:layout_below="@+id/author"
                    android:layout_alignStart="@+id/author" />

            </RelativeLayout>

            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_18"
                android:layout_below="@id/layout_userface" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/opt_filter"
                android:text="@string/post_opt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4"/>

            <TextView
                android:id="@+id/opt_copy"
                android:text="@string/post_opt_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4"/>

            <TextView
                android:id="@+id/opt_quote"
                android:text="@string/post_opt_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4"/>

            <TextView
                android:id="@+id/opt_comment"
                android:text="@string/post_opt_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_4"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>